[gd_scene load_steps=6 format=3 uid="uid://p24vsbjfwwgu"]

[ext_resource type="Script" path="res://Scripts/CheckpointManager.gd" id="1_2d1wr"]
[ext_resource type="AudioStream" uid="uid://cmx2egbsmlg6k" path="res://Assets/SFX/Gameplay-Adventure in the Kitchen.mp3" id="2_q6wsh"]
[ext_resource type="AudioStream" uid="uid://c6ic540hwa1fs" path="res://Assets/SFX/Mouse Dash.mp3" id="3_0lqbl"]

[sub_resource type="Gradient" id="Gradient_g83ej"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dqc3c"]
gradient = SubResource("Gradient_g83ej")

[node name="CheckpointManager" type="Node"]
script = ExtResource("1_2d1wr")

[node name="CheckpointTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fader" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(0.607843, 0.478431, 0.67451, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_dqc3c")

[node name="SecondCounterTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Gameplay" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_q6wsh")
volume_db = -3.0
max_distance = 50000.0
attenuation = 0.00448709
bus = &"Music"

[node name="Main Menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0lqbl")
bus = &"Music"

[connection signal="timeout" from="CheckpointTimer" to="." method="_on_checkpoint_timer_timeout"]
[connection signal="timeout" from="SecondCounterTimer" to="." method="_on_second_counter_timer_timeout"]
